# Robotics-Homework

HW 8/Q2/: CMakeLists.txt  Christian_Wahrmund.cpp  hello.launch  package.xml
HW 8/Q3/: CMakeLists.txt  corners.txt  example2.launch  pubvel.cpp  pubvel_3amod.cpp  pubvel_smart.cpp
HW 8/Q4/: pubvel_spiral.cpp  spiral_orange.launch
HW 8/Q5/: CMakeLists.txt  pubvel_discrete_motion.cpp
HW 9/: display.launch
HW 9/Q1/: compare hw9q1.txt  three_link_manipulator.urdf
HW 9/Q2/: compare hw9q2.txt  three_link_manipulator(RRR).urdf
